--- a/index.html
+++ b/index.html
@@ -1,1 +1,190 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hayden | Portfolio</title>
+  <meta name="description" content="interactive portfolio and GitHub projects." />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <a href="#home" class="logo">pylogic.dev</a>
+    <nav class="nav" aria-label="Primary">
+      <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">☾</button>
+      <a href="#about" class="nav-link">About</a>
+      <a href="#skills" class="nav-link">Skills</a>
+      <a href="#projects" class="nav-link">Projects</a>
+      <a href="#contact" class="nav-link">Contact</a>
+    </nav>
+  </header>
+
+  <main id="home" class="hero section">
+    <div class="hero-content">
+      <h1 class="reveal">Hi, Welcome to my page!</h1>
+      <p class="subtitle reveal">I build performant, delightful software with a focus on usability.</p>
+      <div class="cta-group reveal">
+        <a href="#projects" class="btn primary">View Projects</a>
+        <a href="#contact" class="btn">Get In Touch</a>
+        <a class="btn ghost" href="https://github.com/Hayden959" target="_blank" rel="noopener noreferrer">GitHub ↗</a>
+      </div>
+    </div>
+  </main>
+
+  <section id="about" class="section">
+    <div class="container">
+      <h2 class="section-title reveal">About Me</h2>
+      <p class="section-text reveal">I grew up in a tech‑savvy home and was glued to the computer from a young age. That curiosity led me to earn an associate degree in Computer Science, but programming is what really hooked me. I love building game trainers and mods, and I’m fascinated by reverse engineering.</p>
+      <div class="stats reveal">
+        <div class="stat">
+          <span class="stat-num" id="yearsExp">5+</span>
+          <span class="stat-label">Years Learning/Building</span>
+        </div>
+        <div class="stat">
+          <span class="stat-num" id="projectsCount">—</span>
+          <span class="stat-label">Public Repos</span>
+        </div>
+        <div class="stat">
+          <span class="stat-num">∞</span>
+          <span class="stat-label">Curiosity</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="skills" class="section alt">
+    <div class="container">
+      <h2 class="section-title reveal">Skills</h2>
+      <ul class="chips reveal" aria-label="Technical skills">
+        <li class="chip">Python</li>
+        <li class="chip">Reverse Engineering</li>
+        <li class="chip">Game Modding</li>
+        <li class="chip">Git</li>
+        <li class="chip">Hardware Repair</li>
+        <li class="chip">Networking</li>
+        <li class="chip">Linux</li>
+        <li class="chip">Windows</li>
+        <li class="chip">MacOS</li>
+        <li class="chip">Android</li>
+        <li class="chip">iOS</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="projects" class="section">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title reveal">Projects</h2>
+        <div class="controls reveal">
+          <label class="toggle">
+            <input type="checkbox" id="includeForks" />
+            <span>Show forks</span>
+          </label>
+        </div>
+      </div>
+      <div id="projectsGrid" class="grid reveal" aria-live="polite"></div>
+    </div>
+  </section>
+
+  <section id="contact" class="section alt">
+    <div class="container">
+      <h2 class="section-title reveal">Contact</h2>
+      <p class="section-text reveal">The fastest way to reach me is via GitHub. Open an issue in a related repo or connect with me on my profile.</p>
+      <a class="btn primary reveal" href="https://github.com/Hayden959" target="_blank" rel="noopener noreferrer">Open GitHub Profile</a>
+    </div>
+  </section>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>© <span id="year"></span> pylogic.dev // Built with HTML, CSS, and JS.</p>
+    </div>
+  </footer>
+
+  <script>
+  (function() {
+    const root = document.documentElement;
+    const themeToggle = document.getElementById('themeToggle');
+    const includeForks = document.getElementById('includeForks');
+    const projectsGrid = document.getElementById('projectsGrid');
+    const navLinks = Array.from(document.querySelectorAll('.nav-link'));
+
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme) {
+      root.setAttribute('data-theme', savedTheme);
+    }
+    themeToggle.textContent = root.getAttribute('data-theme') === 'dark' ? '☀' : '☾';
+    themeToggle.addEventListener('click', function() {
+      const next = root.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
+      root.setAttribute('data-theme', next);
+      localStorage.setItem('theme', next);
+      themeToggle.textContent = next === 'dark' ? '☀' : '☾';
+    });
+
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    const observer = new IntersectionObserver(function(entries) {
+      entries.forEach(function(entry) {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('in');
+          observer.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.15 });
+    Array.from(document.querySelectorAll('.reveal')).forEach(function(el) { observer.observe(el); });
+
+    const sections = Array.from(document.querySelectorAll('main.section, section.section'));
+    const onScroll = function() {
+      const y = window.scrollY;
+      let current = sections[0].id;
+      for (var i = 0; i < sections.length; i++) {
+        var s = sections[i];
+        if (y + 100 >= s.offsetTop) { current = s.id; }
+      }
+      navLinks.forEach(function(link) {
+        var href = link.getAttribute('href').slice(1);
+        if (href === current) { link.classList.add('active'); } else { link.classList.remove('active'); }
+      });
+    };
+    document.addEventListener('scroll', onScroll, { passive: true });
+    onScroll();
+
+    function createProjectCard(repo) {
+      var li = document.createElement('article');
+      li.className = 'card';
+      var lang = repo.language || '—';
+      var desc = repo.description || '';
+      li.innerHTML = '\n        <div class="card-head">\n          <a class="card-title" href="' + repo.html_url + '" target="_blank" rel="noopener noreferrer">' + repo.name + ' ↗</a>\n          <span class="lang">' + lang + '</span>\n        </div>\n        <p class="card-desc">' + desc + '</p>\n        <div class="card-meta">\n          <span>★ ' + repo.stargazers_count + '</span>\n          <span>⬇ ' + repo.forks_count + '</span>\n          <span>Updated ' + new Date(repo.updated_at).toLocaleDateString() + '</span>\n        </div>\n      ';
+      return li;
+    }
+
+    async function loadRepos() {
+      projectsGrid.innerHTML = '<div class="loading">Loading projects…</div>';
+      try {
+        const res = await fetch('https://api.github.com/users/Hayden959/repos?per_page=100&sort=updated');
+        if (!res.ok) throw new Error('Failed to fetch repos');
+        const data = await res.json();
+        const filtered = data.filter(function(r) { return includeForks.checked || !r.fork; });
+        document.getElementById('projectsCount').textContent = data.length;
+        if (!filtered.length) {
+          projectsGrid.innerHTML = '<p>No repositories to show.</p>';
+          return;
+        }
+        filtered.sort(function(a, b) { return new Date(b.updated_at) - new Date(a.updated_at); });
+        projectsGrid.innerHTML = '';
+        filtered.forEach(function(repo) { projectsGrid.appendChild(createProjectCard(repo)); });
+      } catch (e) {
+        projectsGrid.innerHTML = '<p class="error">Could not load repositories.</p>';
+      }
+    }
+
+    includeForks.addEventListener('change', loadRepos);
+    loadRepos();
+  })();
+  </script>
+</body>
+</html>
+
 
