--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
   <main id="home" class="hero section">
     <div class="hero-content">
-      <h1 class="reveal">Hi, Welcome to my page!</h1>
+      <h1 class="reveal">Hello, Welcome to my page!</h1>
       <p class="subtitle reveal">I build performant, delightful software with a focus on usability.</p>
       <div class="cta-group reveal">
         <a href="#projects" class="btn primary">View Projects</a>
-        <a href="#contact" class="btn">Get In Touch</a>
+        <a href="mailto:hayden@pylogic.dev" class="btn">Get In Touch</a>
         <a class="btn ghost" href="https://github.com/Hayden959" target="_blank" rel="noopener noreferrer">GitHub ↗</a>
       </div>
     </div>
@@ -92,14 +92,14 @@
   <section id="contact" class="section alt">
     <div class="container">
       <h2 class="section-title reveal">Contact</h2>
-      <p class="section-text reveal">The fastest way to reach me is via GitHub. Open an issue in a related repo or connect with me on my profile.</p>
-      <a class="btn primary reveal" href="https://github.com/Hayden959" target="_blank" rel="noopener noreferrer">Open GitHub Profile</a>
+      <p class="section-text reveal">The fastest way to reach me is via GitHub or Email. Open an issue in a related repo or send me an email.</p>
+      <a class="btn primary reveal" href="mailto:hayden@pylogic.dev?subject=Hello%20Hayden&body=Hi%20Hayden%2C%0D%0A" >Email Me</a>
     </div>
   </section>
 
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="year"></span> pylogic.dev // Built with HTML, CSS, and JS.</p>
+      <p>© <span id="year"></span> hayden@pylogic.dev // Built with HTML, CSS, and JS.</p>
     </div>
   </footer>
 
