--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main id="home" class="hero section">
     <div class="hero-content">
       <h1 class="reveal">Hello, Welcome to my page!</h1>
-      <p class="subtitle reveal">I build performant, delightful software with a focus on usability.</p>
+      <p class="subtitle reveal">I mostly build game trainers, mods, and cheats!</p>
       <div class="cta-group reveal">
         <a href="#projects" class="btn primary">View Projects</a>
         <a href="mailto:hayden@pylogic.dev" class="btn">Get In Touch</a>
