--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hayden | Portfolio</title>
-  <meta name="description" content="interactive portfolio and GitHub projects." />
+  <title>pylogic.dev</title>
+  <meta name="description" content="interactive portfolio and projects." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
@@ -24,7 +24,7 @@
 
   <main id="home" class="hero section">
     <div class="hero-content">
-      <h1 class="reveal">Hello, Welcome to my page!</h1>
+      <h1 class="reveal">Hello, welcome to my page!</h1>
       <p class="subtitle reveal">I mostly build game trainers, mods, and cheats!</p>
       <div class="cta-group reveal">
         <a href="#projects" class="btn primary">View Projects</a>
